--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "project",
+  "name": "cubefix",
   "version": "1.0.0",
-  "description": "",
+  "description": "Interactive 3D Rubik's Cube",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
-  "keywords": [],
+  "keywords": ["rubiks-cube", "3d", "interactive", "vite"],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vite": "^5.0.0",
+    "gh-pages": "^6.0.0"
+  }
 }
